// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Component renders with custom colors 1`] = `
<div>
  <div
    class="sc-dkzDqf eDMmdJ"
  />
</div>
`;

exports[`Label Component renders with snapshot 1`] = `
<div>
  <div
    class="sc-dkzDqf ivUtud"
  >
    Test label
  </div>
</div>
`;
